--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     console.log("Debug Widget Starting...");
 
     // --- 1️⃣ Initialize Agent SDK ---
-    const siteId = "YOUR_SITE_ID"; // <-- replace with your LivePerson site ID
+    const siteId = "54523770"; // <-- replace with your LivePerson site ID
 
     lpTag.agentSDK.init({ siteId })
       .then(() => {
@@ -45,3 +45,4 @@
   </script>
 </body>
 </html>
+
