--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
 </head>
 <body>
-  <h1>LivePerson Debug Widget</h1>
+  <h1>Debug Widget 0.1</h1>
   <p>Open your console to see logs.</p>
 
   <script>
@@ -45,4 +45,5 @@
   </script>
 </body>
 </html>
+
 
