--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
 </head>
 <body>
-  <h1>Debug Widget v1.0.0</h1> <!-- Version displayed here -->
+  <h1>Debug Widget v1.0.1</h1> <!-- Version displayed on the page -->
   <p>Open the console to see logs for the conversation ID.</p>
 
   <script>
@@ -25,22 +25,23 @@
         agentSDK.init({});
         console.log("[LP] agentSDK initialized");
 
-        // Log current conversation ID
-        function printConversationId(context) {
+        // Poll for conversation ID every 5 seconds
+        setInterval(() => {
+          const context = agentSDK.getContextData?.();
           if (context?.CONVERSATION?.ID) {
             console.log("Active Conversation ID:", context.CONVERSATION.ID);
           } else {
-            console.warn("No active conversation.");
+            console.warn("No active conversation");
           }
+        }, 5000);
+
+        // Also print once immediately
+        const context = agentSDK.getContextData?.();
+        if (context?.CONVERSATION?.ID) {
+          console.log("Active Conversation ID:", context.CONVERSATION.ID);
+        } else {
+          console.warn("No active conversation");
         }
-
-        // Subscribe to conversation changes
-        agentSDK.subscribe('CONVERSATION', (event) => {
-          printConversationId(event);
-        });
-
-        // Print current conversation immediately if it exists
-        printConversationId(agentSDK.getContextData?.());
 
       } catch (e) {
         console.error("[LP] agentSDK.init failed", e);
