--- a/index.html
+++ b/index.html
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Debug Widget</title>
+  <meta charset="UTF-8" />
+  <title>LP Debug Widget</title>
+  <!-- Agent Workspace Widget SDK -->
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
 </head>
 <body>
-  <h1>Debug Widget v1.0.3</h1>
-  <p>Open the console to see logs for debugging.</p>
+  <h1>LP Debug Widget 1.0.4</h1>
+  <p>Open the browser console to see logs.</p>
 
   <script>
-    async function waitForAgentSDK(timeout = 5000) {
-      const start = Date.now();
-      while (!window.lpTag?.agentSDK) {
-        if (Date.now() - start > timeout) throw new Error("lpTag.agentSDK did not load in time");
-        await new Promise(r => setTimeout(r, 100));
-      }
-      return window.lpTag.agentSDK;
+    // Minimal logging
+    const log = (...a) => console.log('[LP-DEBUG]', ...a);
+    const warn = (...a) => console.warn('[LP-DEBUG]', ...a);
+    const err = (...a) => console.error('[LP-DEBUG]', ...a);
+
+    // Wait for lpTag.agentSDK to exist
+    function waitForAgentSDK(timeout = 8000) {
+      return new Promise((resolve, reject) => {
+        const t0 = Date.now();
+        (function poll() {
+          if (window.lpTag && window.lpTag.agentSDK) return resolve(window.lpTag.agentSDK);
+          if (Date.now() - t0 > timeout) return reject(new Error('lpTag.agentSDK not found'));
+          setTimeout(poll, 100);
+        })();
+      });
     }
 
-    async function initAgentSDK() {
+    (async function main() {
       try {
         const agentSDK = await waitForAgentSDK();
         agentSDK.init({});
-        console.log("[LP] agentSDK initialized");
+        log('agentSDK.init() called');
 
-        // --- Debugging information ---
-        console.log("Full agentSDK object:", agentSDK);
-        console.log("lpTag config:", window.lpTag?.config);
-        console.log("Window location:", window.location.href);
+        // Prefer BIND so we get the value when it becomes available
+        const candidates = [
+          { path: 'conversationInfo.conversationId', pick: v => v },
+          { path: 'conversationInfo',               pick: v => v && (v.conversationId || v.id) },
+          { path: 'chatInfo.chatId',                pick: v => v },
+          { path: 'conversationData.id',            pick: v => v },
+          { path: 'conversationData',               pick: v => v && (v.id || v.conversationId) }
+        ];
 
-        // Poll for conversation ID every 5 seconds
-        setInterval(() => {
-          if (!agentSDK.getContextData) {
-            console.warn("[Debug] agentSDK.getContextData is undefined!");
-            return;
-          }
+        let printed = false;
 
-          const context = agentSDK.getContextData();
-          console.log("Full context object:", context);
+        candidates.forEach(({ path, pick }) => {
+          agentSDK.bind(path, (data) => {
+            const val = data && data.newValue !== undefined ? data.newValue : data;
+            const convId = pick(val);
+            if (!printed && convId) {
+              printed = true;
+              log('Conversation ID:', convId, `(via "${path}")`);
+              // Optional: unbind all once we have it
+              candidates.forEach(c => { try { agentSDK.unbind(c.path); } catch(e){} });
+            }
+          }, (e) => { if (e) warn(`bind error on ${path}`, e); });
+        });
 
-          if (context?.CONVERSATION?.ID) {
-            console.log("Active Conversation ID:", context.CONVERSATION.ID);
-          } else {
-            console.warn("No active conversation");
-          }
-        }, 5000);
-
-        // Initial check immediately
-        if (agentSDK.getContextData) {
-          const context = agentSDK.getContextData();
-          console.log("Initial full context:", context);
-        } else {
-          console.warn("[Debug] agentSDK.getContextData is undefined on init!");
-        }
+        // Tiny transcript bind to confirm widget is attached to an active convo
+        agentSDK.bind('chatTranscript.lines', (data) => {
+          const lines = (data && data.newValue) || [];
+          if (lines.length) log('Transcript lines (latest):', lines[lines.length - 1]);
+        });
 
       } catch (e) {
-        console.error("[LP] agentSDK.init failed", e);
+        err('Initialization failed:', e);
       }
-    }
-
-    initAgentSDK();
+    })();
   </script>
 </body>
 </html>
