--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>LP Debug Widget</h1>
+  <h1>LP Debug Widget 1.0.7</h1>
   <div class="muted">Accept/open a conversation, then watch the log.</div>
   <div id="log"></div>
 
@@ -72,3 +72,4 @@
   </script>
 </body>
 </html>
+
