--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8" />
   <title>BRAVO (PoC) — Placeholder Version</title>
 
-  <!-- Agent Workspace Widget SDK -->
+  <!-- LivePerson Agent Workspace Widget SDK -->
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
 
   <style>
-    body {
-      font: 14px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      margin:16px;
-    }
+    body { font: 14px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin:16px; }
     h3 { margin: 0 0 8px 0; }
     h4 { margin-top: 16px; }
     ul { margin: 6px 0 0 18px; }
     button { padding: 6px 10px; cursor:pointer; }
     textarea { width:100%; box-sizing:border-box; }
-    #log, #msgs {
+    .badge { background:#e8e8e8; padding:3px 6px; border-radius:6px; font-size:11px; }
+    #sdkStatus { font-size:12px; margin-bottom:8px; padding:6px; background:#f6f6f6; border-radius:6px; }
+    #msgs {
       white-space: pre-wrap;
       border:1px solid #ddd;
       padding:8px;
@@ -26,8 +25,6 @@
       overflow:auto;
       margin-top:6px;
     }
-    .badge { background:#e8e8e8; padding:3px 6px; border-radius:6px; font-size:11px; }
-    #sdkStatus { font-size:12px; margin-bottom:8px; padding:6px; background:#f6f6f6; border-radius:6px; }
   </style>
 </head>
 
@@ -47,7 +44,7 @@
     <button id="btnInsert" disabled>Insert Suggested Reply</button>
   </div>
 
-  <!-- Placeholder Panels -->
+  <!-- Placeholder Panels (from your earlier version) -->
   <h4>Relevant Information</h4>
   <ul id="relevantInfo">
     <li>A higher bill after a recent plan change is often due to a <b>transition bill</b> where customers can see pro‑rated charges from the old plan and new plan on the same bill.</li>
@@ -75,31 +72,22 @@ so you can see what’s one‑off for the change and what your regular monthly c
 
 <script>
 /* -------------------------------------------------------
-   STATUS INDICATOR
+   Status indicator
 ------------------------------------------------------- */
 (function () {
   const statusEl = document.getElementById("sdkStatus");
-
-  function readStatus() {
-    return window.lpTag?.agentSDK ? "Agent SDK" : "No SDK detected";
-  }
-
-  function updateStatus(note) {
-    const mode = readStatus();
-    statusEl.textContent = `[${mode}] ${note || ""}`.trim();
-  }
-
-  updateStatus("Waiting for injection…");
-
-  let ticks = 0;
+  const mode = () => (window.lpTag?.agentSDK ? "Agent SDK" : "No SDK detected");
+  const update = (note) => statusEl.textContent = `[${mode()}] ${note || ""}`.trim();
+  update("Waiting for injection…");
+  let tries = 0;
   const t = setInterval(() => {
-    updateStatus("Waiting for injection…");
-    if (readStatus() !== "No SDK detected" || ++ticks > 20) clearInterval(t);
+    update("Waiting for injection…");
+    if (mode() !== "No SDK detected" || ++tries > 20) clearInterval(t);
   }, 500);
 })();
 
 /* -------------------------------------------------------
-   AGENT SDK INIT
+   Agent SDK initialisation
 ------------------------------------------------------- */
 async function waitForAgentSDK(ms = 8000) {
   const t0 = Date.now();
@@ -110,80 +98,69 @@ async function waitForAgentSDK(ms = 8000) {
   throw new Error("Agent SDK not found in iframe.");
 }
 
-async function initAgentSDK() {
+let _inited = false;
+async function ensureAgentSDK() {
+  if (_inited) return;
   await waitForAgentSDK();
   window.lpTag.agentSDK.init({});
-  console.log("[LP] agentSDK.initialised");
+  _inited = true;
+  console.log("[LP] agentSDK initialised");
 }
-
-initAgentSDK();
 
 /* -------------------------------------------------------
-   HELPERS — conversationId + transcript + composer
+   Helpers (manual refresh path)
+   - We bind once just to capture a snapshot then unbind
+   - For your tenant, we use chatTranscript.lines + latest.dialogId
+   - This mirrors your working debug widget’s approach
 ------------------------------------------------------- */
 
-// 1) Get conversationId via conversationInfo
-async function getActiveConversationId() {
-  await initAgentSDK();
-  return await new Promise(resolve => {
-    const cb = (d) => {
-      try { window.lpTag.agentSDK.unbind("conversationInfo", cb); } catch {}
-      const v = d?.newValue || d || {};
-      resolve(v.conversationId || v.conversationID || "");
+// one-shot bind: resolve with first payload then unbind
+function bindOnce(path) {
+  return new Promise((resolve) => {
+    const cb = (data) => {
+      try { window.lpTag.agentSDK.unbind(path, cb); } catch {}
+      resolve(data);
     };
-    window.lpTag.agentSDK.bind("conversationInfo", cb, () => resolve(""));
+    window.lpTag.agentSDK.bind(path, cb, () => resolve(null));
   });
 }
 
-// 2) fetch transcript lines (chatTranscript.lines)
-async function fetchTranscript(convId, limit = 10) {
-  await initAgentSDK();
-
-  const getOnce = (path) =>
-    new Promise(res =>
-      window.lpTag.agentSDK.get(path, d => res(d), () => res(null))
-    );
-
-  const data =
-    (await getOnce("conversationTranscript.lines")) ||
-    (await getOnce("chatTranscript.lines")) ||
-    [];
-
-  if (!Array.isArray(data)) return [];
-
-  return data.slice(-limit).map(line => {
-    const source = (line.source || line.by || "").toLowerCase();
-    const from = source.includes("agent")
-      ? "agent"
-      : source.includes("bot")
-      ? "bot"
-      : "customer";
-
-    return {
-      from,
-      text: line.text || line.message || "",
-      dialogId: line.dialogId || ""
-    };
-  });
+async function getConversationIdFromTranscript() {
+  const payload = await bindOnce("chatTranscript.lines");
+  const lines = payload?.newValue || [];
+  const latest = Array.isArray(lines) && lines.length ? lines[lines.length - 1] : null;
+  return latest?.dialogId || "";  // this is what worked in your debug widget
 }
 
-// 3) Insert text into composer
+async function fetchTranscriptSlice(limit = 10) {
+  const payload =
+    (await bindOnce("conversationTranscript.lines")) ||
+    (await bindOnce("chatTranscript.lines"));
+  const lines = payload?.newValue || [];
+  return Array.isArray(lines)
+    ? lines.slice(-limit).map(line => {
+        const s = (line.source || line.by || "").toLowerCase();
+        const from = s.includes("agent") ? "agent" : s.includes("bot") ? "bot" : "customer";
+        return { from, text: line.text || line.message || "", dialogId: line.dialogId || "" };
+      })
+    : [];
+}
+
+/* -------------------------------------------------------
+   Composer
+------------------------------------------------------- */
 async function insertIntoComposer(text) {
-  await initAgentSDK();
-
-  const cmd = (name) =>
-    new Promise(r =>
-      window.lpTag.agentSDK.command(name, { text }, () => r(true), () => r(false))
-    );
-
+  await ensureAgentSDK();
+  const cmd = (name) => new Promise(r =>
+    window.lpTag.agentSDK.command(name, { text }, () => r(true), () => r(false))
+  );
   if (await cmd("SendText")) return;
   await cmd("Write ChatLine");
 }
 
 /* -------------------------------------------------------
-   STATE + RENDER
+   State + render
 ------------------------------------------------------- */
-
 const state = { convId: "", messages: [] };
 const $ = (sel) => document.querySelector(sel);
 
@@ -191,32 +168,42 @@ function render() {
   $("#convId").textContent = state.convId || "(none)";
 
   const msgBox = $("#msgs");
-  msgBox.innerHTML = "";
-
+  msgBox.textContent = ""; // reset
   state.messages.forEach(m => {
-    msgBox.innerHTML += `<b>${m.from}:</b> ${m.text}\n`;
+    msgBox.textContent += `${m.from.toUpperCase()}: ${m.text}\n`;
   });
 
   $("#btnInsert").disabled = !$("#suggestedReply").value.trim();
 }
 
+/* -------------------------------------------------------
+   Manual refresh flow
+------------------------------------------------------- */
 async function refreshContext() {
   try {
-    state.convId = await getActiveConversationId();
-    state.messages = await fetchTranscript(state.convId, 10);
+    await ensureAgentSDK();
+
+    // 1) derive conversationId from transcript (as per your working debug)
+    state.convId = await getConversationIdFromTranscript();
+
+    // 2) fetch the latest N lines
+    state.messages = await fetchTranscriptSlice(10);
+
     render();
   } catch (e) {
     console.error("refreshContext failed:", e);
   }
 }
 
-// Button wiring
+/* -------------------------------------------------------
+   Wire buttons + initial refresh
+------------------------------------------------------- */
 $("#btnRefresh").addEventListener("click", refreshContext);
 $("#btnInsert").addEventListener("click", () =>
   insertIntoComposer($("#suggestedReply").value)
 );
 
-// Load immediately
+// Initial manual refresh
 refreshContext();
 </script>
 
