--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- SDK status header -->
   <div id="sdkStatus">Checking LivePerson SDK…</div>
 
-  <h3>BRAVO (PoC) <span class="badge">placeholder</span></h3>
+  <h3>BRAVO (PoC) <span class="badge">0.0.8</span></h3>
 
   <div style="margin: 8px 0;">
     Conversation: <b id="convId">(loading…)</b>
@@ -209,3 +209,4 @@ refreshContext();
 
 </body>
 </html>
+
